Further reduce top padding to 60px - fix content visibility issue

--- a/client/public/css/meme-generator.css
+++ b/client/public/css/meme-generator.css
@@ -1,6 +1,6 @@
 .meme-generator-container {
     min-height: 100vh;
-    padding-top: 80px;
+    padding-top: 60px;
     padding-bottom: 50px;
 }
 
